--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,9 +7,6 @@
         <item name="colorAccent">@color/primary</item>
         <item name="windowActionModeOverlay">true</item>
         <item name="android:windowBackground">@color/bg_normal</item>
-    </style>
-
-    <style name="AppTheme.NoActionBar" parent="AppTheme">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
@@ -17,6 +14,8 @@
     <style name="Preferences" parent="AppTheme">
         <item name="android:textColor">@color/fg_default</item>
         <item name="android:textColorSecondary">@color/fg_default_low</item>
+        <item name="windowActionBar">true</item>
+        <item name="windowNoTitle">false</item>
     </style>
 
     <style name="ncAlertDialog" parent="@style/Theme.AppCompat.DayNight.Dialog.Alert">
