--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -7,6 +7,7 @@
         android:entryValues="@array/noteMode_values"
         android:icon="@drawable/ic_remove_red_eye_grey_24dp"
         android:key="@string/pref_key_note_mode"
+        android:layout="@layout/item_pref"
         android:summary="%s"
         android:title="@string/settings_note_mode" />
 
@@ -14,12 +15,14 @@
         android:defaultValue="@string/pref_value_theme_light"
         android:icon="@drawable/ic_brightness_2_grey_24dp"
         android:key="@string/pref_key_theme"
+        android:layout="@layout/item_pref"
         android:title="@string/settings_theme_title" />
 
     <SwitchPreference
         android:defaultValue="@string/pref_value_font_normal"
         android:icon="@drawable/ic_text_fields_black_24dp"
         android:key="@string/pref_key_font"
+        android:layout="@layout/item_pref"
         android:title="@string/settings_font_title" />
 
     <ListPreference
@@ -28,6 +31,7 @@
         android:entryValues="@array/fontSize_values"
         android:icon="@drawable/ic_format_size_black_24dp"
         android:key="@string/pref_key_font_size"
+        android:layout="@layout/item_pref"
         android:summary="%s"
         android:title="@string/settings_font_size" />
 
@@ -35,6 +39,7 @@
         android:defaultValue="@string/pref_value_wifi_and_mobile"
         android:icon="@drawable/ic_sync_black_24dp"
         android:key="@string/pref_key_wifi_only"
+        android:layout="@layout/item_pref"
         android:title="@string/settings_wifi_only" />
 
 </PreferenceScreen>
