--- a/app/src/main/res/layout/item_notes_list_note_item.xml
+++ b/app/src/main/res/layout/item_notes_list_note_item.xml
@@ -81,8 +81,8 @@
                     android:layout_height="wrap_content"
                     android:singleLine="true"
                     android:layout_weight="1"
-                    android:textColor="@drawable/list_item_color_selector"
                     android:textSize="@dimen/primary_font_size"
+                    android:textColor="?android:textColorPrimary"
                     tools:text="The title of the note"/>
             </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -102,7 +102,6 @@
                     android:paddingBottom="1dp"
                     android:paddingTop="1dp"
                     android:layout_weight="1"
-                    android:textColor="@drawable/list_item_color_selector_low"
                     android:textSize="@dimen/secondary_font_size"
                     tools:text="This is the content of the first line."/>
 
@@ -121,7 +120,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginLeft="8dp"
                     android:singleLine="true"
-                    android:textColor="@drawable/list_item_color_selector"
+                    android:textColor="?android:textColorPrimary"
                     android:textSize="@dimen/secondary_font_size"
                     tools:text="My fancy category"/>
             </androidx.appcompat.widget.LinearLayoutCompat>
