Fix shadow color of header text in dark mode

--- a/app/src/main/res/layout/drawer_layout.xml
+++ b/app/src/main/res/layout/drawer_layout.xml
@@ -65,7 +65,7 @@
                         android:layout_marginEnd="@dimen/header_padding"
                         android:layout_marginRight="@dimen/header_padding"
                         android:ellipsize="end"
-                        android:shadowColor="@color/fg_default"
+                        android:shadowColor="@android:color/black"
                         android:shadowDx="0.5"
                         android:shadowDy="0"
                         android:shadowRadius="2"
@@ -85,7 +85,7 @@
                         android:layout_marginRight="@dimen/header_padding"
                         android:ellipsize="end"
                         android:maxLines="1"
-                        android:shadowColor="@color/fg_default"
+                        android:shadowColor="@android:color/black"
                         android:shadowDx="0.5"
                         android:shadowDy="0"
                         android:shadowRadius="2"
