--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -11,12 +11,12 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:theme="@style/toolbarStyle"
         app:contentInsetStartWithNavigation="0dp"
         app:elevation="4dp"
-        app:titleMarginStart="0dp"
         app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
-        tools:title="Edit Sample note"/>
+        app:titleMarginStart="0dp"
+        tools:title="Edit Sample note" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment_container_view"
