#378 Enhance category handling
Remove padding analog to preferences dialogs and account chooser dialog

--- a/app/src/main/res/layout/dialog_change_category.xml
+++ b/app/src/main/res/layout/dialog_change_category.xml
@@ -5,11 +5,7 @@
     android:id="@+id/editCategoryLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingStart="?dialogPreferredPadding"
-    android:paddingLeft="?dialogPreferredPadding"
-    android:paddingEnd="?dialogPreferredPadding"
-    android:paddingRight="?dialogPreferredPadding">
+    android:orientation="vertical">
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
