--- a/app/src/main/res/layout/widget_entry.xml
+++ b/app/src/main/res/layout/widget_entry.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/widget_note_list_entry"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
@@ -32,6 +33,7 @@
         android:layout_weight="1"
         android:textColor="@color/widget_fg_default"
         android:ellipsize="end"
-        android:lines="1" />
+        android:lines="1"
+        tools:text="@string/app_name_long"/>
 
 </LinearLayout>
