Switch from deprecated singleLine="true" to maxLines="1"
Signed-off-by: stefan-niedermann <info@niedermann.it>

--- a/app/src/main/res/layout/item_notes_list_note_item.xml
+++ b/app/src/main/res/layout/item_notes_list_note_item.xml
@@ -79,7 +79,8 @@
                     android:id="@+id/noteTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:singleLine="true"
+                    android:ellipsize="end"
+                    android:maxLines="1"
                     android:layout_weight="1"
                     android:textSize="@dimen/primary_font_size"
                     android:textColor="?android:textColorPrimary"
