--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -4,10 +4,8 @@
 
     <color name="primary_dark">#286090</color>
 
-    <color name="separator">#262626</color>
-
-    <color name="bg_highlighted">#060606</color>
-    <color name="bg_normal">#222222</color>
+    <color name="bg_highlighted">#2a2a2a</color>
+    <color name="bg_normal">#121212</color>
     <color name="bg_attention">#ff3333</color>
     <color name="fg_default">#eeeeee</color>
     <color name="fg_default_selection">#cccccc</color>
@@ -16,5 +14,4 @@
     <color name="fg_contrast">#000000</color>
 
     <color name="category_background">@color/primary</color>
-    <color name="category_border">@color/primary</color>
 </resources>
