--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,6 @@
     <color name="primary">#0082C9</color>
     <color name="primary_dark">#286090</color>
 
-    <color name="separator">#fbfbfb</color>
-
     <color name="bg_highlighted">#eee</color>
     <color name="bg_normal">#ffffff</color>
     <color name="bg_attention">#d40000</color>
@@ -23,7 +21,7 @@
     <color name="widget_fg_default">#000000</color>
     <color name="widget_fg_contrast">#ffffff</color>
 
-    <color name="category_background">#ffffff</color>
+    <color name="category_background">?android:colorBackground</color>
     <color name="category_border">@color/primary</color>
 
     <!-- Dark Theme -->
