Fix #730 API Level 15 cannot use ?android: attributes
Signed-off-by: stefan-niedermann <info@niedermann.it>

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,7 +21,7 @@
     <color name="widget_fg_default">#000000</color>
     <color name="widget_fg_contrast">#ffffff</color>
 
-    <color name="category_background">?android:colorBackground</color>
+    <color name="category_background">@color/bg_normal</color>
     <color name="category_border">@color/primary</color>
 
     <!-- Dark Theme -->
