--- a/app/src/main/res/xml/create_note_widget_provider.xml
+++ b/app/src/main/res/xml/create_note_widget_provider.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:initialKeyguardLayout="@layout/widget_create_note"
     android:initialLayout="@layout/widget_create_note"
-    android:minHeight="40dp"
     android:minWidth="40dp"
+    android:minHeight="40dp"
     android:previewImage="@drawable/ic_widget_create"
+    android:resizeMode="none"
+    android:text="@string/widget_create_note"
     android:updatePeriodMillis="86400000"
     android:widgetCategory="home_screen"
-    android:text="@string/widget_create_note"
-    android:resizeMode="none"></appwidget-provider>
+    tools:targetApi="jelly_bean_mr1" />
