--- a/app/src/main/res/layout/item_tip.xml
+++ b/app/src/main/res/layout/item_tip.xml
@@ -1,14 +1,15 @@
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.AppCompatTextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/tip"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center_vertical|center_horizontal"
     android:drawablePadding="@dimen/activity_horizontal_margin"
     android:gravity="start|center"
-    android:padding="@dimen/activity_horizontal_margin"
+    android:padding="@dimen/activity_margin"
     android:textColor="?android:textColorPrimary"
+    app:drawableLeftCompat="@drawable/ic_lightbulb_outline_grey600_24dp"
     app:drawableStartCompat="@drawable/ic_lightbulb_outline_grey600_24dp"
     tools:maxLength="200"
     tools:text="@tools:sample/lorem/random" />
