--- a/app/src/main/res/layout/item_tip.xml
+++ b/app/src/main/res/layout/item_tip.xml
@@ -5,9 +5,9 @@
     android:id="@+id/tip"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:drawablePadding="@dimen/activity_horizontal_margin"
+    android:drawablePadding="@dimen/spacer_2x"
     android:gravity="start|center"
-    android:padding="@dimen/activity_margin"
+    android:padding="@dimen/spacer_2x"
     android:textColor="?android:textColorPrimary"
     app:drawableLeftCompat="@drawable/ic_lightbulb_outline_grey600_24dp"
     app:drawableStartCompat="@drawable/ic_lightbulb_outline_grey600_24dp"
