--- a/app/src/main/res/layout/activity_exception.xml
+++ b/app/src/main/res/layout/activity_exception.xml
@@ -21,7 +21,7 @@
         android:id="@+id/message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/activity_margin"
+        android:layout_margin="@dimen/spacer_2x"
         android:hint="An error appeared."
         tools:ignore="HardcodedText" />
 
@@ -29,7 +29,7 @@
         android:id="@+id/stacktrace"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginStart="@dimen/activity_margin"
+        android:layout_marginStart="@dimen/spacer_2x"
         android:layout_marginLeft="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
