--- a/app/src/main/res/layout/drawer_layout.xml
+++ b/app/src/main/res/layout/drawer_layout.xml
@@ -38,6 +38,7 @@
                     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
                     <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/header_view_background"
                         android:layout_width="match_parent"
                         android:layout_height="164dp"
                         android:contentDescription="@null"
