--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -23,11 +23,18 @@
         android:defaultValue="@string/pref_value_theme_system_default"
         android:entries="@array/darkmode_entries"
         android:entryValues="@array/darkMode_values"
-        android:summary="%s"
         android:icon="@drawable/ic_brightness_2_grey_24dp"
         android:key="@string/pref_key_theme"
         android:layout="@layout/item_pref"
+        android:summary="%s"
         android:title="@string/settings_theme_title" />
+
+    <it.niedermann.owncloud.notes.branding.BrandedSwitchPreference
+        android:defaultValue="true"
+        android:icon="@drawable/ic_color_lens_grey600_24dp"
+        android:key="@string/pref_key_branding"
+        android:layout="@layout/item_pref"
+        android:title="@string/settings_branding" />
 
     <it.niedermann.owncloud.notes.branding.BrandedSwitchPreference
         android:defaultValue="@string/pref_value_font_normal"
