--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="spacer_1hx">4dp</dimen>
     <dimen name="spacer_1x">8dp</dimen>
     <dimen name="spacer_2x">16dp</dimen>
+    <dimen name="spacer_3x">24dp</dimen>
 
     <!-- Buttons -->
     <dimen name="button_padding">@dimen/spacer_2x</dimen>
