--- a/app/src/main/res/layout/activity_notes_list_view.xml
+++ b/app/src/main/res/layout/activity_notes_list_view.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            android:theme="@style/toolbarStyle"
+            android:theme="?attr/toolbarTheme"
             app:contentInsetStartWithNavigation="0dp"
             app:elevation="4dp"
             app:titleMarginStart="0dp"
